--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<meta name="description" content="">
 
 	<!-- stylesheet css -->
+   <link rel="bookmark" type="image/x-icon" href="/images/title_image.png"/>
+   <link rel="shortcut icon" href="/images/title_image.png"> 
+   <link rel="icon" href="/images/title_image.png">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/templatemo-blue.css">
